[package]
name = "libarc2"
version = "0.1.0"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
edition = "2018"

[lib]
name = "libarc2"

[dependencies]
ndarray = "0.15"
bitvec = "0.21"
bitflags = "1.2"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"

[dependencies.beastlink]
path = "../beastlink-rs"
version = "0.1"

[dev-dependencies]
serial_test = "0.4"
assert_matches = "1.5"

[features]
# enable this to run hardware tests with cargo test
hardware_tests = []
# enable this to print out raw packets to stderr
debug_packets = []
# enabling this prevents libarc2 from writing to the hardware
dummy_writes = []
# enable this to zero memory segments before writing
zero_before_write = []
