[package]
name = "libarc2"
version = "0.7.0-alpha.1"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
description = "Low-level interface library for ArC TWO™"
edition = "2018"
license = "MPL-2.0"
homepage = "http://arc-instruments.co.uk"
repository = "https://github.com/arc-instruments/libarc2"

exclude = ["getbl-win32.py"]

[lib]
name = "libarc2"

[dependencies]
bitvec = "~1.0"
bitflags = "1.3"
num-derive = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
thiserror = "1.0"
spin_sleep = "1.2"

[target.'cfg(all(any(target_os = "windows", target_os = "linux"), target_arch = "x86_64"))'.dependencies]
beastlink = { git = "https://github.com/arc-instruments/beastlink-rs", version = "1.0" }

[dev-dependencies]
serial_test = "0.4"
assert_matches = "1.5"

[features]
default = ['flag_addresses']
# enable flag addresses to check data validity
flag_addresses = []
# enable this to run hardware tests with cargo test
hardware_tests = []
# enable this to print out raw packets to stderr
debug_packets = []
# enabling this prevents libarc2 from writing to the hardware
dummy_writes = []
# enable this to zero memory segments before writing
zero_before_write = []
